# LilTracer

./: .gitattributes  CMakeLists.txt  README.md  install_packages_windows.bat
apps/brdf_viewer/: CMakeLists.txt  main.cpp
apps/convergence/: CMakeLists.txt  main.cpp
apps/envmap_sampling/: CMakeLists.txt  main.cpp
apps/lil_tracer/: main.cpp
apps/renderer/: CMakeLists.txt  main.cpp
cmake/: clang_format.cmake
data/cornell/: cornell.json
data/dragon/: dragon.json
data/lte-orb/: lte-orb-rough.json  lte-orb.json
data/vis_mis/: vis_mis_brdf.json  vis_mis_direct.json  vis_mis_envmap_brdf.json  vis_mis_envmap_direct.json  vis_mis_path.json  vis_mis_spherelights_brdf.json  vis_mis_spherelights_direct.json  vis_mis_spherelights_path.json
doc/: CMakeLists.txt  Doxyfile
lt/: CMakeLists.txt
lt/include/lt/: brdf.h  camera.h  factory.h  geometry.h  integrator.h  io.h  io_exr.h  light.h  lt.h  lt_common.h  mesh.h  params.h  ray.h  renderer.h  sampler.h  scene.h  sensor.h  serialize.h  surface_interaction.h  texture.h
lt/src/: brdf.cpp  camera.cpp  geometry.cpp  integrator.cpp  light.cpp  mesh.cpp  ray.cpp  scene.cpp  sensor.cpp  serialize.cpp
src/: CMakeLists.txt
src/lt/: brdf_common.cpp  brdf_common.h  camera.cpp  camera.h  factory.h  geometry.cpp  geometry.h  integrator.cpp  integrator.h  io.h  io_exr.h  light.cpp  light.h  lt.h  lt_common.cpp  lt_common.h  params.h  ray.cpp  ray.h  renderer.h  scene.h  sensor.cpp  sensor.h  serialize.h  surface_interaction.h
src/lt/brdf/: beckmann.cpp  beckmann.h  brdf.cpp  brdf.h  emissive.cpp  emissive.h  ggx.cpp  ggx.h  lambert.cpp  lambert.h  micrograin.cpp  micrograin.h  mix.cpp  mix.h  shape_invariant.cpp  shape_invariant.h  test.cpp  test.h
